made some css modifications to listitem tags and added some title and names

--- a/src/app/car-list-item/car-list-item.component.html
+++ b/src/app/car-list-item/car-list-item.component.html
@@ -1,1 +1,8 @@
-<p>car-list-item works!</p>
+<div style="border: 2px solid red; padding: 10px;margin: 10px">
+  <h2>{{Car?.Name}}</h2>
+  <p>model: {{Car?.Model}}</p>
+  <p>Year : {{Car?.Year}}</p>
+  <p>Make : {{Car?.Make}}</p>
+  <p>Color: {{Car?.Color}}</p>
+  <p>isAdmin: {{Car?.isAdmin}}</p>
+</div>
