Tried everything to get perfect output but unable to figure out why images and data is not executing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,12 @@
 :host {
   display: block;
   padding: 20px;
-  background-color: black;
+  background-color: white;
 }
 
 h2 {
   text-align: center;
-  color: whitesmoke;
+  color: black;
   font-size: 26px;
   margin-bottom: 20px;
 }
